# vm-curator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN-create-wizard.md  QEMU_profile_update.md  README.md  cursor_memory_review.md  flake.nix
.gemini_ascii_tool/: ascii_gen.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/ascii/: _dos.txt  beos.txt  haiku.txt  linux-bazzite.txt  linux-debian.txt  linux-ubuntu.txt  mac-system7.txt  nix-os.txt  plan9.txt  solaris.txt  windows-11.txt  windows-31.txt  windows-95.txt  windows-me.txt  windows-xp.txt
assets/metadata/: defaults.toml  hierarchy.toml  qemu_profiles.toml  settings_help.toml  shared_folders_help.toml
scripts/: release.sh
src/: app.rs  fs.rs  lib.rs  main.rs  wizard_types.rs
src/commands/: mod.rs  qemu_img.rs  qemu_system.rs
src/config/: mod.rs
src/hardware/: mod.rs  multi_gpu.rs  passthrough.rs  pci.rs  single_gpu.rs  usb.rs
src/hardware/tests/: pci.rs  single_gpu.rs  usb.rs
src/metadata/: ascii_art.rs  hierarchy.rs  mod.rs  os_info.rs  qemu_profiles.rs  shared_folders_help.rs
src/metadata/tests/: qemu_profiles.rs
src/platform/: mod.rs
src/tests/: fs.rs
src/ui/: mod.rs
src/ui/screens/: configuration.rs  create_wizard.rs  help.rs  import_wizard.rs  main_menu.rs  management.rs  mod.rs  multi_gpu_setup.rs  network_settings.rs  pci_passthrough.rs  settings.rs  shared_folders.rs  single_gpu_setup.rs
src/ui/screens/tests/: create_wizard.rs  pci_passthrough.rs
src/ui/widgets/: ascii_display.rs  dialog.rs  mod.rs  vm_list.rs
src/vm/: create.rs  discovery.rs  import.rs  launch_parser.rs  lifecycle.rs  mac.rs  mod.rs  qemu_config.rs  single_gpu_scripts.rs  snapshot.rs
src/vm/tests/: create.rs  discovery.rs  import.rs  launch_parser.rs  lifecycle.rs  snapshot.rs
vm-curator/: .gitignore  Cargo.toml  claude-code-review.md
vm-curator/assets/ascii/: _default.txt  _linux.txt  _mac.txt  freebsd.txt  linux-cachyos.txt  linux-fedora.txt  linux-garuda.txt  linux-mint.txt  linux-pop.txt  linux-zorin.txt  mac-osx.txt  nextstep.txt  os2-warp3.txt  windows-vista.txt
vm-curator/assets/metadata/: defaults.toml  hierarchy.toml
vm-curator/src/: app.rs  main.rs
vm-curator/src/commands/: qemu_img.rs
vm-curator/src/hardware/: mod.rs
vm-curator/src/metadata/: ascii_art.rs  mod.rs  os_info.rs
vm-curator/src/ui/: mod.rs
vm-curator/src/ui/screens/: configuration.rs  main_menu.rs  management.rs
vm-curator/src/ui/widgets/: vm_list.rs
vm-curator/src/vm/: lifecycle.rs  mod.rs  snapshot.rs
