[package]
name = "vm-curator"
version = "0.1.1"
edition = "2021"
description = "A TUI application to manage QEMU VM library"
authors = ["Mark Roboff"]
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
nom = "8.0"
libudev = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
dirs = "6.0"
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
